[package]
name = "noclickd"
version = "0.1.0"
authors = ["Leandro Lucarella <luca@llucax.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.5.4"
actix-http = "2.2.0"
actix-web = { version = "3.3.2", features = ["rustls"] }
clap = "2.33.3"
futures = "0.3.13"
kuchiki = "0.8.1"
lazy_static = "1.4.0"
nanoid = "0.3.0"
regex = "1.4.3"
rustls = "0.18.1" # We need to stay with 0.18 because actix uses this version
serde = { version = "1.0.123", features = ["derive"] }
unicode-segmentation = "1.7.1"
unidecode = "0.3.0"
url = "2.2.1"
